--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "cloudtravel",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://hiring.zumata.xyz",
+  "homepage": "http://localhost:8080/",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "cors": "^2.8.5",
+    "vue": "^3.0.0",
+    "vue-axios": "^3.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,7 +23,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "http-proxy-middleware": "^2.0.3"
   },
   "eslintConfig": {
     "root": true,
