--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "cloudtravel",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://hiring.zumata.xyz",
-  "homepage": "http://localhost:8080/",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@syncfusion/ej2-vue-dropdowns": "^19.4.50",
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
+    "jw-vue-pagination": "^1.0.3",
     "vue": "^3.0.0",
-    "vue-axios": "^3.4.1"
+    "vue-axios": "^3.4.1",
+    "vue-class-component": "^7.2.6",
+    "vue-paginate": "^3.6.0",
+    "vue-star-rating": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -24,7 +27,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "http-proxy-middleware": "^2.0.3"
+    "http-proxy-middleware": "^2.0.3",
+    "sass": "^1.49.9",
+    "sass-loader": "^10.2.1"
   },
   "eslintConfig": {
     "root": true,
