--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "vue-axios": "^3.4.1",
     "vue-class-component": "^7.2.6",
     "vue-paginate": "^3.6.0",
+    "vue-router": "^4.0.0-0",
     "vue-star-rating": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.15",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
