--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest --watchAll",
+    "test-once": "jest"
   },
   "dependencies": {
     "@syncfusion/ej2-vue-dropdowns": "^19.4.50",
@@ -13,25 +15,33 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "jw-vue-pagination": "^1.0.3",
+    "promise.prototype.finally": "^3.1.3",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.1",
     "vue-class-component": "^7.2.6",
     "vue-paginate": "^3.6.0",
     "vue-router": "^4.0.0-0",
-    "vue-star-rating": "^2.1.0"
+    "vue-star-rating": "^2.1.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.15",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "@vue/test-utils": "^2.0.0-rc.17",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.5.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "http-proxy-middleware": "^2.0.3",
     "sass": "^1.49.9",
-    "sass-loader": "^10.2.1"
+    "sass-loader": "^10.2.1",
+    "vue-jest": "^3.0.7"
   },
   "eslintConfig": {
     "root": true,
@@ -51,5 +61,16 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "vue-jest"
+    }
+  }
 }
+
